app/src/test/resources/programs/valid/separatorInstructionBlock.extension
foo main() -> Int {
    // Correct block where the last expression is the value of the block
    {
        2 * 4;
        1 + 3;
        7 / 7
    }
}